# mcp-agentconnect-sync

./: .dockerignore  .gitattributes  .gitignore  README.md  REVIEW.md  pyproject.toml
config/: profiles.yaml  providers.yaml  routing.yaml  secrets.example.yaml
deploy/: README.md  configure_secrets.py  install.ps1  install.sh  register_mcp.py  secrets_prompts.json  verify.ps1  verify.sh  verify_checks.py
docs/: AGENT_RUNTIME.md  ARCHITECTURE.md  BACKPLANE.md  BACKPLANE_SPEC.md  BACKPLANE_SPEC_ADAPTERS.md  BACKPLANE_SPEC_TEMPORAL.md  MODEL_ADAPTERS.md  OPERATOR_GUIDE.md  REVIEW_FINDINGS.md  STATUS.md  WORK_QUEUE.md
examples/: demo.py  federation_demo.py
tests/: conftest.py  test_agentic_rented.py  test_approval_web.py  test_authorization.py  test_backends_and_adapters.py  test_backplane_acceptance.py  test_backplane_adapters.py  test_backplane_compliance.py  test_backplane_context.py  test_backplane_core.py  test_backplane_linear.py  test_backplane_memory.py  test_backplane_routing.py  test_backplane_temporal.py  test_budget.py  test_circuit_breaker.py  test_cli_provider_config.py  test_cli_subprocess_gateway.py  test_cli_subprocess_routing.py  test_compression.py  test_default_secret_mapping.py  test_dispatch_agentic.py  test_evaluation.py  test_federation_demo.py  test_gateway_cloud.py  test_gateway_resilience.py  test_guard_integration.py  test_memory.py  test_memory_eval.py  test_nodepool_concurrency.py  test_omniroute_config.py  test_privacy.py  test_pull_endpoint.py  test_pull_worker.py  test_queue_web.py  test_quota.py  test_rental.py  test_routing.py  (+10 more)
(+22 files in other folders)
