[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentconnect"
version = "0.1.0"
description = "MCP Agent Router + Local Model Manager: a two-service agent infrastructure with deterministic routing, shared memory, and context virtualization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# The core (routing, memory, quota, state, privacy, providers) runs on the base
# dependencies alone. The service entrypoints add their frameworks here.
router = ["mcp>=1.0", "httpx>=0.27"]
model-manager = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "httpx>=0.27"]
all = ["mcp>=1.0", "httpx>=0.27", "fastapi>=0.110", "uvicorn>=0.29", "pytest>=8.0"]

[project.scripts]
agentconnect-router = "agentconnect.router.mcp_server:main"
agentconnect-model-manager = "agentconnect.model_manager.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
